# market-intelligence-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: event_source_mi5.yaml  event_source_mi6.yaml  macro_series_mi3.yaml  market_data_source_mi1.yaml  mi2_research_registry.yaml  sec_issuer_panel_mi7.yaml  universe_mi1.yaml
data/: README.md
docs/: availability_evidence_policy.md  continuation_map.md  corporate_actions_and_price_policy.md  data_contracts.md  data_publication_policy.md  implementation_roadmap.md  mi1_scope.md  thesis_continuity_appendix.md
src/market_intelligence_lab/: __init__.py  cli.py
src/market_intelligence_lab/contracts/: __init__.py  records.py
src/market_intelligence_lab/data/: __init__.py  adapter_yfinance.py  availability.py  pipeline.py  registry.py  snapshot.py  source.py
src/market_intelligence_lab/mi2/: __init__.py  technical_baseline.py
src/market_intelligence_lab/mi3/: __init__.py  macro_vintage_forecast.py
src/market_intelligence_lab/mi4/: __init__.py  tree_technical_comparator.py
src/market_intelligence_lab/mi5/: __init__.py  fomc_event_text.py
src/market_intelligence_lab/mi6/: __init__.py  bls_release_qualification.py
src/market_intelligence_lab/mi7/: __init__.py  sec_edgar_8k_qualification.py
tests/: test_mi0_foundation.py  test_mi1_market_data.py  test_mi2_technical_baseline.py  test_mi3_macro_vintage_forecast.py  test_mi4_tree_technical_comparator.py  test_mi5_fomc_event_text.py  test_mi6_bls_release_qualification.py  test_mi7_sec_edgar_8k_qualification.py  test_mi8_shadow.py
(+8 files in other folders)
