[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intelligence-lab"
version = "0.1.0"
description = "Research-only point-in-time market-intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Devesh Pansare" }]
dependencies = [
    "pandas>=2.2,<3.0",
    "pandas-market-calendars>=4.4,<6.0",
    "pyarrow>=15.0,<22.0",
    "PyYAML>=6.0,<7.0",
    "yfinance>=0.2.40,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
